<resources>
    <string name="app_name">Java OCA Prep</string>
    <string name="title_all_chapters">Choose Your Test</string>
    <string name="title_result">Your Test Score</string>
    <string name="title_test">Test</string>
    <string name="title_random_question">Random Questions</string>
    <string name="title_activity_all_chapters">All chapters</string>
    <string name="title_activity_favorite_questions">Favorite questions</string>
    <string name="title_activity_favorite_questions_view">Question</string>
    <string name="title_activity_certification_info">OCA certification</string>
    <string name="title_activity_contact">Contact us</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About this app</string>
    <string name="title_activity_chapter">Chapter</string>
    <string name="title_activity_dashboard">Choose your Dashboard</string>
    <string name="title_activity_final_test_chart">Final Test Dashboard</string>
    <string name="title_activity_random_test">Random test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="share">Share via</string>
    <string name="share_subject">OCA training app</string>
    <string name="share_text">Checkout this app\n</string>
    <string name="application_play_store_url">https://play.google.com/store/apps/details?id=io.mdevlab.ocatraining</string>
    <string name="action_settings">Settings</string>
    <string name="chapter_transition_name">chapterTransition</string>
    <string name="final_test_title">Final test</string>
    <string name="final_test_subtitle">Twice A week</string>
    <string name="final_test_body">Full length certification-like exam, 77 questions</string>
    <string name="random_test_title">Random test</string>
    <string name="random_test_subtitle">Subtitle</string>
    <string name="random_test_body">1 question/answer set exam</string>
    <string name="custom_test_title">Customized test</string>
    <string name="custom_test_subtitle">Each day one</string>
    <string name="custom_test_body">5 Questions/answers sets exams</string>
    <string name="start_test_description">Start test</string>
    <string name="start_test">></string>
    <string name="dummy_explanation">A. Line 4 instantiates an Order. Java runs the declarations and instance initializers first
in the order they appear. This sets value to tacf. Line 5 creates another Order and
initializes value to tacb. The object on line 5 is stored in the same variable line 4 used.
This makes the object created on line 4 unreachable. When value is printed, it is the
instance variable in the object created on line 5.</string>
    <string name="dummy_question">What is the output of the following program? \n \n
1: public class FeedingSchedule { \n
2: public static void main(String[] args) { \n
3: boolean keepGoing = true; \n
4: int count = 0; \n
5: int x = 3; \n
6: while(count++ &lt; 3) { \n
7: int y = (1 + 2 * count) % 3; \n
8: switch(y) { \n
9: default: \n
10: case 0: x -= 1; break; \n
11: case 1: x += 5; \n
12: } \n
13: } \n
14: System.out.println(x); \n
15: } }</string>
    <string name="drawer_upgrade">Upgrade</string>
    <string name="drawer_certification_info">OCA certification</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_favorite_questions">Favorite questions</string>
    <string name="drawer_test_dashboard">Tests Dashboard</string>
    <string name="drawer_other">Other</string>
    <string name="drawer_share">Share</string>
    <string name="drawer_about">About the app</string>
    <string name="notifications_category_key">notifications_category_key</string>
    <string name="notifications_category_title">Notifications</string>
    <string name="notifications_toggle_key">notifications_toggle_key</string>
    <string name="notifications_toggle_title">Enable notifications</string>
    <string name="notifications_toggle_summary">Enable or disable notifications</string>
    <string name="notifications_frequency_key">notifications_frequency_key</string>
    <string name="notifications_frequency_title">Notifications frequency</string>
    <string name="notifications_frequency_summary">Set how often you want to receive notifications</string>
    <string name="notifications_frequency_default_value">Set how often you want to receive notifications</string>
    <string name="notifications_chapters_key">notifications_chapters_key</string>
    <string name="notifications_chapters_title">Notifications chapters</string>
    <string name="notifications_chapters_summary">Set chapters for which you\'ll receive notifications</string>
    <string name="notification_build_error">Method sendNotification in NotificationBuilder class: Error while building a notification</string>
    <string name="about_app_end">\u00a9 2017 mDevLab . All rights reserved</string>
    <string name="send_email">Send email</string>
    <string name="no_email_client_error">There is no email clients installed.</string>
    <string name="about_body">This app was created in order to help you prepare efficiently and methodically for the OCA (Oracle Certified Associate) Java SE certification exam.\n\nIf you\'ve liked what you\'ve seen so far, don\'t hesitate to go check out other cool Android apps we\'ve made.\n\nIf you have any questions, get in touch with us by emailing us:</string>
    <string name="about_play_store">Play store</string>
    <string name="about_email">Email us</string>
    <string name="about_github">Our Github</string>
    <string name="send_button">Send</string>
    <string name="contact_name_empty">Please enter your name</string>
    <string name="contact_message_empty">Please enter your message</string>
    <string name="contact_name">Name</string>
    <string name="contact_message">Message</string>
    <string name="last_question">Last</string>
    <string name="test_result">Results</string>
    <string name="first_question">First</string>
    <string name="next_question">Next</string>
    <string name="previous_question">Previous </string>
    <string name="question_answer">Answer</string>
    <string name="question">Question</string>
    <string name="confirm_exit_message">Are you sure you want to leave, other ways you can save it for later</string>
    <string name="confirm_exit_title">Quit the Test</string>
    <string name="confirm_exit_random_question_message">Are you sure you want to leave.</string>
    <string name="confirm_exit_random_question_title">Quit Random Questions</string>
    <string name="quit_and_save">Quit and Save</string>
    <string name="quit">Quit</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="correct_default">Correct: 0</string>
    <string name="correct">Correct: %1$d</string>
    <string name="incorrect_default">Incorrect: 0</string>
    <string name="incorrect">Incorrect: %1$d</string>
    <string name="resume_test">Resume</string>
    <string name="stop_test">Stop</string>
    <string name="test_summary_title">Summary</string>
    <string name="test_score">Your score: %1$s</string>
    <string name="test_duration">Duration: %1$s</string>
    <string name="take_another_test">Another test</string>
    <string name="back_to_main_screen">Home</string>
    <string name="upgrade">Upgrade</string>
    <string name="bookmarked_question">Bookmarked question</string>
    <string name="result_exit_message">Are you sure you want to leave your results</string>
    <string name="result_exit_title">Quit the Results</string>
    <string name="piechart_title">Score</string>
    <string name="results_list_title">Results</string>
    <string name="correct_answers_label">Correct answers</string>
    <string name="false_answers_label">False answers</string>
    <plurals name="minutes">
        <item quantity="zero">%d minute </item>
        <item quantity="one">%d minute </item>
        <item quantity="other">%d  minutes</item>
    </plurals>
    <plurals name="hours">
        <item quantity="zero">hour </item>
        <item quantity="one">hour </item>
        <item quantity="other">%d  hours</item>
    </plurals>
    <string name="subscribe_to_certification">Schedule a test !</string>
    <string name="certification_info_url">http://www.google.com</string>
    <string name="certification_subscription_url">http://www.pearsonvue.com/oracle/schedule/</string>
    <string name="info_facts_title">Quick facts</string>
    <string name="info_facts_certification_name_key">Certification name</string>
    <string name="info_facts_certification_name_value">Oracle Certified Associate, Java SE 8 Programmer</string>
    <string name="info_facts_certification_code_key">Exam code</string>
    <string name="info_facts_certification_code_value">1Z0-808</string>
    <string name="info_facts_certification_duration_key">Duration of exam</string>
    <string name="info_facts_certification_duration_value">150 minutes</string>
    <string name="info_facts_certification_questions_number_key">Number of questions</string>
    <string name="info_facts_certification_questions_number_value">80 (Multiple Choice)</string>
    <string name="info_facts_certification_passing_score_key">Passing score</string>
    <string name="info_facts_certification_passing_score_value">65 % (52 out of 77)</string>
    <string name="info_facts_certification_prerequisite_key">Pre-requisite</string>
    <string name="info_facts_certification_prerequisite_value">None</string>
    <string name="info_benefits_title">Benefits of this certification</string>
    <string name="info_benefit_one_bold">Cover all fundamental aspects</string>
    <string name="info_benefit_one_normal">of Java programming (focus on breadth of knowledge) from Oracle\’s perspective.</string>
    <string name="info_benefit_two_bold">Demonstrate your skills</string>
    <string name="info_benefit_two_normal">to your employer, peers and customers that you are proficient in Java Technologies and use industry-standards best practices.</string>
    <string name="info_benefit_three_bold">Enhance your salary, job</string>
    <string name="info_benefit_three_normal">opportunities and credibility by adding new credentials in your resume.</string>
    <string name="info_benefit_four_bold">Get officially accredited</string>
    <string name="info_benefit_four_normal">as a Java Professional.</string>
    <string name="info_curriculum_title">Certification curriculum</string>
    <string name="info_curriculum_one">1. Java Basics</string>
    <string name="info_curriculum_two">2. Working With Java Data Types</string>
    <string name="info_curriculum_three">3. Using Operators and Decision Constructs</string>
    <string name="info_curriculum_four">4. Creating and Using Arrays</string>
    <string name="info_curriculum_five">5. Using Loop Constructs</string>
    <string name="info_curriculum_six">6. Working with Methods and Encapsulation</string>
    <string name="info_curriculum_seven">7. Working with Inheritance</string>
    <string name="info_curriculum_eight">8. Handling Exceptions</string>
    <string name="info_curriculum_nine">9. Working with Selected classes from the Java API</string>
    <string name="no_favorites_text_intro">You don\'t currently have any favorite questions.\n\nIn order to save a question, simply check the <u>Star</u> icon seen in the photo below.</string>
    <string name="no_favorites_text_middle">Now, the star icon should look like below, this means the question has <u>successfully</u> been <u>saved</u>!</string>
    <string name="no_favorites_text_end">Once you\'ll have saved questions, they will all be displayed on this screen.</string>
    <string name="no_favorites_before">No favorite questions - Unchecked star</string>
    <string name="no_favorites_after">No favorite questions - Checked star</string>
</resources>