<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="@string/notifications_category_key"
        android:title="@string/notifications_category_title">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/notifications_toggle_key"
            android:summary="@string/notifications_toggle_summary"
            android:title="@string/notifications_toggle_title" />

        <ListPreference
            android:defaultValue="@string/notifications_frequency_default_value"
            android:dependency="@string/notifications_toggle_key"
            android:entries="@array/notifications_frequency_entries"
            android:entryValues="@array/notifications_frequency_entry_values"
            android:key="@string/notifications_frequency_key"
            android:summary="@string/notifications_frequency_summary"
            android:title="@string/notifications_frequency_title" />

        <MultiSelectListPreference
            android:dependency="@string/notifications_toggle_key"
            android:entries="@array/notifications_chapters_entries"
            android:entryValues="@array/notifications_chapters_entry_values"
            android:key="@string/notifications_chapters_key"
            android:summary="@string/notifications_chapters_summary"
            android:title="@string/notifications_chapters_title" />

    </PreferenceCategory>
</PreferenceScreen>