<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_upgrade"
            android:icon="@drawable/ic_menu_upgrade"
            android:title="@string/drawer_upgrade" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_setting"
            android:title="@string/drawer_settings" />
        <item
            android:id="@+id/nav_favorite_questions"
            android:icon="@drawable/ic_save_no"
            android:title="@string/drawer_favorite_questions" />
    </group>

    <item android:title="@string/drawer_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/drawer_share" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/drawer_about" />
        </menu>
    </item>

</menu>
