<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryTransparent"
    tools:context="io.mdevlab.ocatraining.activity.AboutActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/publisherAdView"
        android:layout_below="@+id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Header-->
            <TextView
                android:id="@+id/about_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="@dimen/about_header_text_size"
                android:textStyle="bold" />

            <!--Body-->
            <LinearLayout
                android:id="@+id/about_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/about_header"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/about_sections_space"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingLeft="@dimen/about_screen_side_margin"
                    android:paddingRight="@dimen/about_screen_side_margin"
                    android:text="@string/about_body"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/about_body_text_size"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/about_body_margin_top"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/playstore_account"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/about_play_store"
                        android:src="@drawable/ic_play_store" />

                    <ImageView
                        android:id="@+id/github_account"
                        android:layout_width="0dp"
                        android:layout_height="32dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/about_github"
                        android:src="@drawable/ic_github" />

                    <ImageView
                        android:id="@+id/email_account"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/about_email"
                        android:src="@drawable/ic_email" />

                </LinearLayout>

            </LinearLayout>

            <!--Footer-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/about_body"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/about_screen_bottom_margin"
                android:layout_marginTop="@dimen/about_sections_space"
                android:text="@string/about_app_end"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </RelativeLayout>

    </ScrollView>

    <include layout="@layout/layout_publisher_view_relative" />

</RelativeLayout>