<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />


    <!--Final test-->
    <LinearLayout
        android:id="@+id/final_test"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/chapter_card_margin_nano"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/chapter_card_margin"
            app:cardBackgroundColor="@android:color/white"
            card_view:cardCornerRadius="@dimen/chapter_card_album_radius"
            card_view:cardElevation="@dimen/chapter_card_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <!--Test text-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/all_chapters_test_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/final_test_title" />

                    <TextView
                        style="@style/all_chapters_test_subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/final_test_subtitle" />

                    <TextView
                        style="@style/all_chapters_test_body"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/final_test_body" />

                </LinearLayout>

                <!--start test-->
                <include layout="@layout/layout_start_test" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>


    <!--Custom test-->
    <LinearLayout
        android:id="@+id/custom_test"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/chapter_card_margin_nano"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/chapter_card_margin"
            app:cardBackgroundColor="@android:color/white"
            card_view:cardCornerRadius="@dimen/chapter_card_album_radius"
            card_view:cardElevation="@dimen/chapter_card_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <!--Test text-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/all_chapters_test_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/custom_test_title" />

                    <TextView
                        style="@style/all_chapters_test_subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/custom_test_subtitle" />

                    <TextView
                        style="@style/all_chapters_test_body"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/custom_test_body" />

                </LinearLayout>

                <!--start test-->
                <include layout="@layout/layout_start_test" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>


    <!--Random test-->
    <LinearLayout
        android:id="@+id/random_test"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/chapter_card_margin_nano"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/chapter_card_margin"
            app:cardBackgroundColor="@android:color/white"
            card_view:cardCornerRadius="@dimen/chapter_card_album_radius"
            card_view:cardElevation="@dimen/chapter_card_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <!--Test text-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/all_chapters_test_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/random_test_title" />

                    <TextView
                        style="@style/all_chapters_test_subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/random_test_subtitle" />

                    <TextView
                        style="@style/all_chapters_test_body"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/random_test_body" />

                </LinearLayout>

                <!--start test-->
                <include layout="@layout/layout_start_test" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>


    <include layout="@layout/layout_publisher_view_linear" />

</LinearLayout>
