<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="io.mdevlab.ocatraining.activity.ContactActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <!--Form-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/form_margin"
                android:layout_marginLeft="@dimen/form_margin"
                android:layout_marginRight="@dimen/form_margin"
                android:layout_marginTop="@dimen/upper_margin"
                android:orientation="vertical">

                <!--Name-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/contact_name_container"
                    style="@style/TextInputLayout"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/contact_name"
                        style="@style/TextInputEditText"
                        android:hint="@string/contact_name"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <!--Message-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/contact_message_container"
                    style="@style/TextInputLayout"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/contact_message"
                        style="@style/TextInputEditText"
                        android:gravity="top|start"
                        android:hint="@string/contact_message"
                        android:lines="8" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <!--Send button-->
            <Button
                android:id="@+id/send_email"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:background="@color/green_buttons_color"
                android:text="@string/send_button"
                android:textColor="@android:color/white"
                android:textSize="13sp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
